Name:                assimp
Version:             0.1
Synopsis:            The Assimp asset import library

-- Description:
Homepage:            htt://programsthatsmellgood.com/haskell-assimp/
License:             BSD3
License-file:        LICENSE
Author:              Joel Burget
Maintainer:          joelburget@gmail.com
Copyright:           Joel Burget 2011
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules: Graphics.Formats.Assimp
  Other-modules:
    Graphics.Formats.Assimp.Types
    Graphics.Formats.Assimp.Storable
    Graphics.Formats.Assimp.Fun
    C2HS
  ghc-options: -Wall
  Build-depends: base > 3 && < 5, haskell98, vector
  Build-tools: c2hs
  Extensions: ForeignFunctionInterface
  Extra-libraries: assimp
  -- Extra-lib-dirs: assimp/lib
  Includes: assimp.h
  Include-dirs: 
    assimp/include/
    Graphics/Formats/
