Name:                assimp
Version:             0.1
Synopsis:            The Assimp asset import library

Description:
    This library provides FFI bindings to the Assimp asset import
    library. It requires Assimp to already be installed. For more
    information about Assimp see the assimp website at
    http://assimp.sourceforge.net/.

    This release corresponds to Assimp 2.0. When this package stabilizes I
    intend to track new releases of Assimp by also releasing new versions with
    the same version number.
License:             BSD3
License-file:        LICENSE
Author:              Joel Burget
Maintainer:          joelburget@gmail.com
Copyright:           Joel Burget 2011
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2

Library
  Exposed-modules: Graphics.Formats.Assimp
  Other-modules:
    Graphics.Formats.Assimp.Vec
    Graphics.Formats.Assimp.Types
    Graphics.Formats.Assimp.Storable
    Graphics.Formats.Assimp.Fun
    C2HS
  ghc-options: -Wall -O
  Build-depends: base > 3 && < 5, haskell98
  Build-tools: c2hs, hsc2hs
  Extensions: ForeignFunctionInterface
  Extra-libraries: assimp
  Includes: assimp.h
  Include-dirs: 
    include/
    Graphics/Formats/
