Name:                assimp
Version:             0.1
Synopsis:            The Assimp asset import library

Description:
    /Important/: Install with
    @cabal install --extra-include-dirs \/usr\/local\/include\/assimp\/@
    Of course use the location of the include files on your system.
    .
    This library provides FFI bindings to the Assimp asset import
    library. It requires Assimp to already be installed. For more
    information about Assimp see the assimp website at
    <http://assimp.sourceforge.net/>.
    .
    This release corresponds to Assimp 2.0. When this package stabilizes I
    intend to track new releases of Assimp by also releasing new versions with
    the same version number, but this should be considered a beta release.
    Importing models is currently working. Textures and animations are
    untested.
    .
    Here is a sample program that imports a scene and then outputs the
    information contained in it.
    .
    > module Main where
    > 
    > import System (getArgs)
    > import Graphics.Formats.Assimp
    > 
    > -- Defines the preprocessing we want assimp to perform
    > processing = [ CalcTangentSpace
    >              , Triangulate
    >              , JoinIdenticalVertices
    >              , SortByPType
    >              ]
    > 
    > main = do
    >   args <- getArgs
    >   mapM_ (print =<<)
    >     [ importFile (head args) processing -- Outputs all information in the scene
    >     , getVersionMajor     -- Print the major version of assimp
    >     , getVersionMinor     -- Print the minor version of assimp
    >     , getVersionRevision  -- Print the version revision of assimp
    >     ]
    .
    See <https://github.com/joelburget/Cologne/blob/master/Cologne/AssimpImport.hs>
    for more.
    
License:             BSD3
License-file:        LICENSE
Author:              Joel Burget
Maintainer:          joelburget@gmail.com
Copyright:           Joel Burget 2011-2012
Category:            Graphics
Build-type:          Simple
Cabal-version:       >= 1.6

Library
  Exposed-modules: Graphics.Formats.Assimp
  Other-modules:
    Graphics.Formats.Assimp.Anim
    Graphics.Formats.Assimp.Camera
    Graphics.Formats.Assimp.Color4D
    Graphics.Formats.Assimp.Fun
    Graphics.Formats.Assimp.Light
    Graphics.Formats.Assimp.Material
    Graphics.Formats.Assimp.Matrix
    Graphics.Formats.Assimp.Mesh
    Graphics.Formats.Assimp.PostProcess
    Graphics.Formats.Assimp.Quaternion
    Graphics.Formats.Assimp.Scene
    Graphics.Formats.Assimp.Texture
    Graphics.Formats.Assimp.Types
    Graphics.Formats.Assimp.Version
  ghc-options: -Wall
  Build-depends: base         >= 4     && < 5
               , vect         >= 0.4.6 && < 0.5
               , bindings-DSL >= 1.0.7 && < 1.1
  Build-tools: hsc2hs
  Extensions: ForeignFunctionInterface
  Extra-libraries: assimp
  Include-dirs: 
    include,
    Graphics/Formats/

Source-repository head
  type:     git
  location: git@github.com:joelburget/assimp.git
